--- a/chrome.css
+++ b/chrome.css
@@ -1,41 +1,63 @@
-
-/* Blurs the background */
-#urlbar[breakout-extend="true"] #urlbar-background {
-    border: solid 3px color-mix(in hsl, hsl(0 0 50), transparent 90%) !important;
+@-moz-document url-prefix("chrome:") {
+  /* Blurs the background */
+  #urlbar[breakout-extend="true"] #urlbar-background {
     border-radius: 15px !important;
-    background-color: color-mix(in hsl, hsl(0 0 10), transparent 40%) !important;
-    backdrop-filter: blur(25px) !important;
-}
+    border: solid 3px color-mix(in hsl, hsl(0 0 50), transparent 90%) !important;
+  }
 
-#urlbar[breakout-extend="true"] .urlbar-input-container {
-    padding-top: 7px !important;
-    padding-bottom: 0px !important;
-}
+  @media (prefers-color-scheme: dark) {
+    #urlbar[breakout-extend="true"] #urlbar-background {
+      background-color: color-mix(
+        in hsl,
+        var(--mod-cleanedurlbar-customdarkcolor),
+        transparent var(--mod-cleanedurlbar-customtransparency)
+      ) !important;
+    }
+  }
 
-/* Unifies the border radius */
-.urlbarView-row {
-  border-radius: 11px !important;
-}
+  @media (prefers-color-scheme: light) {
+    #urlbar[breakout-extend="true"] #urlbar-background {
+      background-color: color-mix(
+        in hsl,
+        var(--mod-cleanedurlbar-customlightcolor),
+        transparent var(--mod-cleanedurlbar-customtransparency)
+      ) !important;
+    }
+  }
 
-/* Deletes the border */
-.urlbarView-body-inner {
-   border: none !important;
-}
+  /* Custom URL result selected color */
+  .urlbarView-row {
+    &[selected] {
+      background-color: var(--mod-cleanedurlbar-customselectcolor) !important;
+      color: var(--mod-cleanedurlbar-customselectfontcolor) !important;
+    }
+  }
 
-/* Styles the search options */
-.search-one-offs {
-  border-top: none !important;
-  border-radius: 10px !important;
-  padding: 4px !important;
-  margin: 0px 0px 7px 0px !important;
-  backdrop-filter: brightness(130%);
-}
+  /* Unifies the border radius */
+  .urlbarView-row {
+    border-radius: 11px !important;
+  }
 
-.searchbar-engine-one-off-item {
-  border-radius: 8px !important;
-  margin-right: 3px !important;
-}
+  /* Deletes the border */
+  .urlbarView-body-inner {
+    border: none !important;
+  }
 
-#urlbar-anon-search-settings {
-  margin-right: 0px !important;
+  /* Styles the search options */
+  .search-one-offs {
+    border-top: none !important;
+    border-radius: 10px !important;
+    padding: 4px !important;
+    margin: 0px 0px 7px 0px !important;
+    backdrop-filter: brightness(130%);
+  }
+
+  .searchbar-engine-one-off-item {
+    border-radius: 8px !important;
+    margin-right: 3px !important;
+  }
+
+  #urlbar-anon-search-settings {
+    margin-right: 0px !important;
+  }
 }
