Blurs the urlbar bg

--- a/chrome.css
+++ b/chrome.css
@@ -5,6 +5,10 @@
     border: solid 3px color-mix(in hsl, hsl(0 0 50), transparent 90%) !important;
   }
 
+  #urlbar[breakout-extend="true"] #urlbar-background {
+    backdrop-filter: blur(25px) !important;
+  }
+  
   @media (prefers-color-scheme: dark) {
     #urlbar[breakout-extend="true"] #urlbar-background {
       background-color: color-mix(
